# spec-audit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
demo/strategy_repo/: backtest_runner.py  risk_guard.py  robustness_check.py
spec_audit/: __init__.py  cli.py  webui.py
